--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
-<meta lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="\css\styles.css">
-<link rel="stylesheet" href="\css\bootstrap.min.css">
+<link rel="stylesheet" href="css\styles.css">
+<link rel="stylesheet" href="css\bootstrap.min.css">
 <title>Module 3 Coursework</title>
 </head>
 <body>
